# wanderer-for-godot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct
.github/workflows/: ci.yml  main.yml
demo/: main.tscn  project.godot
src/: gdlibrary.cpp  godot_wanderer.cpp  godot_wanderer.h  wanderer.c
wanderer/: main.gd  main.tscn  project.godot
